@@ -1,5 +1,5 @@
 ﻿<window id="502">
-	<views>55,58,905</views>
+	<views>55,58,905,559</views>
 	<defaultcontrol>55</defaultcontrol>
 	<allowoverlay>yes</allowoverlay>
 	<controls>
@@ -16,7 +16,9 @@
 		<include>Viewtype_Files</include>
 		<include>Viewtype_LowList</include>
 		<include>Viewtype_Gallery_Square</include>
+		<include>Viewtype_Panel_Square</include>
 		<include>Global_ContextFilter</include>
+		
 		<!-- Navigation Menu -->
 		<control type="group">
 			<include>Animation_NavMenu</include>
